enterprise/ivy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axonivy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axonivy
  template:
    metadata:
      labels:
        app: axonivy
    spec:
      containers:
        - name: axonivy
          image: axonivy/axonivy-engine:dev
          ports:
            - containerPort: 8080
