enterprise/ivy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axonivy
spec:
  selector:
    app: axonivy
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort  # Or use LoadBalancer with minikube tunnel
