enterprise/opensearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.19.1
          ports:
            - containerPort: 9200
              name: opensearch
---

apiVersion: v1
kind: Service
metadata:
  name: opensearch
spec:
  type: NodePort
  ports:
    - port: 9200
      name: opensearch
  selector:
    app: opensearch
