enterprise/ivy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ivy
  template:
    metadata:
      labels:
        app: ivy
    spec:
      containers:
        - name: ivy
          image: axonivy/axonivy-engine:dev
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: licence-volume
              mountPath: /ivy/configuration

            - name: ivy-data
              mountPath: /ivy/data

            - name: ivy-applications
              mountPath: /ivy/applications

      volumes:
        - name: ivy-data
          persistentVolumeClaim:
            claimName: ivy-data

        - name: ivy-applications
          persistentVolumeClaim:
            claimName: ivy-applications

        - name: licence-volume
          configMap:
            name: ivy-licence
            items:
              - key: IVY_LICENCE
                path: licence.lic


---

apiVersion: v1
kind: Service
metadata:
  name: ivy
spec:
  selector:
    app: ivy
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivy-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "christian-loves-sticky-sessions"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
    - host: raccoon.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ivy
                port:
                  number: 8080
